--- a/templates/web/planupgrade-callback.html
+++ b/templates/web/planupgrade-callback.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+{% csrf_token %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,52 +27,40 @@
   <!-- End layout styles -->
   <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
 
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
   <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
   <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
 
   <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
-
-  <link rel="stylesheet" href="{% static 'web/css/jquery-ui.min.css' %}">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color:#f2edf3 ;">
 
-
-  <div class="container-scroller">
-    {% include 'web/partials/header.html' %}
-    <!-- partial -->
-    <div class="container-fluid page-body-wrapper" style="padding-right: 0px;padding-left:0px;">
-      {% include 'web/partials/sidebar.html' %}
-      {% block content %}
-
-      {% endblock %}
+  <div class="success-card">
+    <div class="svg-container">
+      <svg class="ft-green-tick" xmlns="http://www.w3.org/2000/svg" height="100" width="100" viewBox="0 0 48 48"
+        aria-hidden="true">
+        <circle class="circle" fill="#5bb543" cx="24" cy="24" r="22" />
+        <path class="tick" fill="none" stroke="#FFF" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"
+          stroke-miterlimit="10" d="M14 27l5.917 4.917L34 17" />
+      </svg>
     </div>
-    <!-- page-body-wrapper ends -->
-    {% include 'web/partials/footer.html' %}
-
+    <div class="success-content">
+      <h4>Congratulations, The scheduled upgrade has been completed successfully.</h4>
+    </div>
+    <a href="{% url 'web:profile' %}" id="contBtn">Continue</a>
   </div>
 
 
-  <!-- container-scroller -->
 
+
+
+  <!-- container-scroller -->
   <!-- plugins:js -->
   <script src="{% static 'web/vendors/js/vendor.bundle.base.js' %}"></script>
-
   <!-- endinject -->
-
-
-
-  <!-- sweet alert -->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
-    integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-  <!-- sweet alert ends -->
   <!-- Plugin js for this page -->
   <script src="{% static 'web/vendors/chart.js/Chart.min.js' %}"></script>
   <script src="{% static 'web/js/jquery.cookie.js' %}" type="text/javascript"></script>
@@ -82,47 +72,17 @@
   <!-- endinject -->
   <script src="{% static 'web/js/owl.carousel.min.js' %}"></script>
 
-  <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-
-
-
+  <script src="{% static 'web/js/main.js' %}"></script>
   <!-- Custom js for this page -->
   <script src="{% static 'web/js/dashboard.js' %}"></script>
   <script src="{% static 'web/js/todolist.js' %}"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.15.3/dist/sweetalert2.all.min.js"></script>
-
-  <!-- <script type="text/javascript" src="../../ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script> -->
-  <script src="{% static 'web/js/main.js' %}"></script>
-
-  <script src="{% static 'web/js/search.js' %}"></script>
-
-  <script src="{% static 'web/js/invoice_search.js' %}"></script>
-
-
-<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "3d531d32-fe15-4b93-80b3-0746517b0021",
-      safari_web_id: "web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063",
-      notifyButton: {
-        enable: true,
-      },
-    });
-  });
-</script>
-  
-
 
   <!-- End custom js for this page -->
 
-  {% block js %}
-  {% endblock %}
+
 
 
 </body>
