--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -195,7 +195,7 @@
                             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                                        Expiry Date: 11/02/2023
+                                        Expiry Date: {{subscription_validity.valid_upto|date:"M/d/Y"}}
                                     </div>
                                 </div>
                             </div>
