--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -18931,6 +18931,10 @@ dl li {
 }
 
 @media (max-width: 767px) {
+  .logo-login {
+    width: 60% !important;
+    margin: 0px auto;
+}
   .navbar .navbar-menu-wrapper .navbar-nav .nav-item .nav-link {
     margin-left: .8rem;
     margin-right: .8rem;
@@ -19853,7 +19857,7 @@ dl li {
 .content-wrapper {
   background: #f2edf3;
   padding: 0 2.25rem;
-  padding-top: 6.75rem;
+  padding-top: 1.75rem;
   padding-bottom: 1rem;
   width: 100%;
   -webkit-box-flex: 1;
@@ -21004,7 +21008,7 @@ a:hover {
   }
 
   .software-card-margin {
-    margin: 0px 0px !important;
+    margin: 0px -30px !important;
   }
 
   .form-dodument-card-margin {
@@ -21353,11 +21357,11 @@ a:hover {
 
 @media only screen and (min-width:1024px) {
   .software-card-margin {
-    margin: 0px 0px !important;
+    margin: 0px -27px !important;
   }
 
   .form-dodument-card-margin {
-    margin-right: -63px !important;
+    margin-right: -58px !important;
   }
 }
 
@@ -21507,8 +21511,8 @@ h2 em {
   padding: 0;
   border-radius: 20px;
   background-color: #f1f8fe;
-  min-height: 230px;
-  width: 81%;
+  min-height: 216px;
+  width: 77%;
 }
 
 .download-button {
@@ -21525,7 +21529,7 @@ h2 em {
   background: -webkit-linear-gradient(5deg, #69009f, #0066ff 69%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 
