--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -30,8 +30,7 @@
                         <div class="tm_shape_bg tm_accent_bg tm_mobile_hide"></div>
                     </div>
                     <div class="tm_invoice_info tm_mb25">
-                        <div class="tm_card_note tm_mobile_hide"><b class="tm_primary_color">Payment Method: </b>Paypal,
-                            Western Union</div>
+                        
                         <div class="tm_invoice_info_list tm_white_color">
                             <p class="tm_invoice_number tm_m0">Invoice No: <b>{{ invoice.invoice_no }}</b></p>
                             <p class="tm_invoice_date tm_m0">Date: <b>{{invoice.created}}</b></p>
@@ -46,7 +45,16 @@
                                 {{invoice.customer.address}} <br> {{invoice.customer.phone_no}} <br>
                                 {{invoice.customer.email}}
                             </p>
+                           
+                                {% for item in invoice.get_invoiceitem %}
+                                <p>
+                                    Username : {{item.username}} <br>
+                                    Password : {{item.password}}
+                                </p>
+                                {% endfor %}
+                           
                         </div>
+
                         <div class="tm_invoice_right tm_text_right">
                             <p class="tm_mb2"><b class="tm_primary_color">Pay To:</b></p>
                             <p>
@@ -76,7 +84,7 @@
                                         <tr>
                                             <td class="tm_width_3">1. {{ item.services_name }}</td>
                                             <td class="tm_width_4">{{item.descripton}}</td>
-                                            <td class="tm_width_2">${{item.services_charge}}</td>
+                                            <td class="tm_width_2">&#8377;{{item.services_charge}}</td>
                                             <td class="tm_width_1">{{item.qty}}</td>
                                             <td class="tm_width_2 tm_text_right">${{item.get_subtotal}}</td>
                                         </tr>
@@ -111,22 +119,11 @@
                             </div>
                         </div>
                         <div class="tm_invoice_footer tm_border_top tm_mb15 tm_m0_md">
-                            <div class="tm_left_footer">
-                                <p class="tm_mb2"><b class="tm_primary_color">Payment info:</b></p>
-                                <p class="tm_m0">Credit Card - 236***********928 <br>Amount: $1732</p>
-                            </div>
+                           
                             <div class="tm_right_footer">
                                 <table class="tm_mb15">
                                     <tbody>
-                                        <tr class="tm_gray_bg ">
-                                            <td class="tm_width_3 tm_primary_color tm_bold">Subtoal</td>
-                                            <td class="tm_width_3 tm_primary_color tm_bold tm_text_right">$1650</td>
-                                        </tr>
-                                        <tr class="tm_gray_bg">
-                                            <td class="tm_width_3 tm_primary_color">Tax <span
-                                                    class="tm_ternary_color">(5%)</span></td>
-                                            <td class="tm_width_3 tm_primary_color tm_text_right">+$82</td>
-                                        </tr>
+                                        
                                         <tr class="tm_accent_bg">
                                             <td class="tm_width_3 tm_border_top_0 tm_bold tm_f16 tm_white_color">Grand
                                                 Total </td>
