--- a/templates/web/generate-poster.html
+++ b/templates/web/generate-poster.html
@@ -3,6 +3,37 @@
 {% load static %}
 {% load humanize %}
 
+
+
+<style>
+   .detail-button{
+    background-color: #008b92;
+    border: 1px solid #008b92;
+    border-radius: 4px;
+    width: 60%;
+    margin: 2px auto;
+    
+}
+@media only screen and (min-width: 320px) and (max-width:567px){
+  .detail-button{
+   background-color: #008b92;
+   border: 1px solid #008b92;
+   border-radius: 4px;
+   width: 76% !important;
+   margin: 2px auto;
+}
+}
+
+@media only screen and (min-width: 568px) and (max-width:768px){
+  .detail-button{
+   background-color: #008b92;
+   border: 1px solid #008b92;
+   border-radius: 4px;
+   width: 66% !important;
+   margin: 2px auto;
+}
+}
+</style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
@@ -42,7 +73,7 @@
 
         {% endfor %} -->
 
-
+    
 
         {% for commo_services in common_services_poster|slice:"2::" %}
         <div class="col-lg-3 col-md-4 col-sm-6 col-6">
@@ -53,8 +84,11 @@
               <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
                 data-source="{{commo_services.id | apnumber }}">Click to Download</button>
             </div>
-            
+            <div class="detail-button">
+              <a href="{{commo_services.detail_link}}" style=" color: #fff;">Details</a>
+            </div>
             <span>{{commo_services.title}}</span>
+            
           </div>
         </div>
         {% endfor %}
@@ -84,7 +118,9 @@
               <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
                 data-source="{{festive_poster.id | apnumber }}">Click to Download</button>
             </div>
-            
+            <div class="detail-button">
+              <a href="{{festive_poster.detail_link}}" style=" color: #fff;">Details</a>
+            </div>
             <span>{{festive_poster.title}}</span>
           </div>
         </div>
@@ -101,7 +137,9 @@
               <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
                 data-source="{{prof_posters.id | apnumber }}">Click to Download</button>
             </div>
-            
+            <div class="detail-button">
+              <a href="{{prof_posters.detail_link}}" style=" color: #fff;">Details</a>
+            </div>
             <span>{{prof_posters.title}}</span>
           </div>
         </div>
@@ -131,7 +169,9 @@
               <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
                 data-source="{{common_services.id | apnumber }}">Click to Download</button>
             </div>
-            
+            <div class="detail-button">
+              <a href="{{common_services.detail_link}}" style=" color: #fff;">Details</a>
+            </div>
             <span>{{common_services.title}}</span>
           </div>
         </div>
@@ -160,7 +200,9 @@
               <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
                 data-source="{{festive_poster.id | apnumber }}">Click to Download</button>
             </div>
-            
+            <div class="detail-button">
+              <a href="{{festive_poster.detail_link}}" style=" color: #fff;">Details</a>
+            </div>
             <span>{{festive_poster.title}}</span>
           </div>
         </div>
@@ -193,7 +235,9 @@
               <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
                 data-source="{{prof_posters.id | apnumber }}">Click to Download</button>
             </div>
-            
+            <div class="detail-button">
+              <a href="{{prof_posters.detail_link}}" style=" color: #fff;">Details</a>
+            </div>
             <span>{{prof_posters.title}}</span>
           </div>
         </div>
