--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -7,7 +7,35 @@
 {% csrf_token %} 
 <!-- search -->
 
+<style>
+  .detail-button{
+   background-color: #008b92;
+   border: 1px solid #008b92;
+   border-radius: 4px;
+   width: 60%;
+   margin: 2px auto;
+}
 
+@media only screen and (min-width: 320px) and (max-width:567px){
+  .detail-button{
+   background-color: #008b92;
+   border: 1px solid #008b92;
+   border-radius: 4px;
+   width: 76% !important;
+   margin: 2px auto;
+}
+}
+
+@media only screen and (min-width: 568px) and (max-width:768px){
+  .detail-button{
+   background-color: #008b92;
+   border: 1px solid #008b92;
+   border-radius: 4px;
+   width: 66% !important;
+   margin: 2px auto;
+}
+}
+</style>
 
 
 <!--  -->
@@ -110,7 +138,9 @@
                 <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
                   data-source="{{posters.id | apnumber }}">Click to Download</button>
               </div>
-
+              <div class="detail-button">
+                <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
+              </div>
               <span>{{posters.title}}</span>
             </div>
           </div>
@@ -153,7 +183,9 @@
                 <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
                   data-source="{{posters.id | apnumber }}">Click to Download</button>
               </div>
-
+              <div class="detail-button">
+                <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
+              </div>
               <span>{{posters.title}}</span>
             </div>
           </div>
@@ -161,15 +193,7 @@
           {% endfor %}
         </div>
       </div>
-
-
     </section>
-
-
-
-
-
-
   </div>
   <!-- content-wrapper ends -->
 
