--- a/templates/web/documents.html
+++ b/templates/web/documents.html
@@ -2,7 +2,11 @@
 {% block content %}
 {% load static %}
 
-
+<style>
+    .form-detail{
+        padding: 6px 39px;
+    }
+</style>
 <div class="main-panel " id="demo">
     <div class="content-wrapper" id="demo2">
         <section>
@@ -21,10 +25,10 @@
                         </a>
                         <a href="{{docs.file.url}}"  download="{{docs.file.url}}">
                             <div class="text-center">
-                                <!-- <div class="download-button text-center ">
-                                    <span class="text-center">Download File</span>
-                                </div> -->
                                 <button class="btn-hover color-3">Download File</button>
+                            </div>
+                            <div class="text-center">
+                                <a href="{{docs.detail_link}}" class="btn-hover color-3 form-detail" rel="noopener noreferrer" target="_blank">Details</a>
                             </div>
                             
                         </a>
