--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -21,7 +21,7 @@
       </div>
       <ul class="navbar-nav navbar-nav-right">
         <li class="nav-item nav-profile dropdown">
-          <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="profileDropdown" href="{% url 'web:profile' %}" >
             <div class="nav-profile-img">
 
               {% if request.user.profile_image %}
@@ -35,10 +35,12 @@
               <p class="mb-1 text-black">{{request.user.name}}</p>
             </div>
           </a>
+        {% comment %}
           <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
             <a class="dropdown-item" href="{% url 'auth_logout' %}">
               <i class="mdi mdi-logout mr-2 text-primary"></i> Signout </a>
           </div>
+          {% endcomment %}
         </li>
         <li class="nav-item d-none d-lg-block full-screen-link">
           <a class="nav-link">
