--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -131,9 +131,7 @@
         font-size: 14px;
         text-align: center;
     } */
-    .responsive-size{
-        height: 90px;
-    }
+    
     }
 </style>
 
@@ -240,7 +238,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                 <div class="branding_image_uploading">
                     {% if uploaded_branding_image.image %}
-                    <img src="{{uploaded_branding_image.image.crop.1000x100}}" style="width: 100%;" class="responsive-size">
+                    <img src="{{uploaded_branding_image.image.url}}" style="width: 100%;" class="responsive-size">
                     {% else %}
                     <h5 style="text-align: center;color: rgb(77, 3, 3);padding: 40px 0px;">Upload Your Branding Image</h5>
                     {% endif %}
