--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -34,7 +34,6 @@
 
     .label-file {
         display: block;
-        margin: 0 auto;
         padding: 7px 10px;
         background-color: #00409f;
         color: #fff;
@@ -98,41 +97,32 @@
     }
     }
 
-    @media only screen and (min-width:1044px){
-        /* .buynow_button {
-        background-color: #00409f;
-        color: #fff;
-        padding: 7px 10px;
-        margin: 0px 9px;
-        text-align: center;
-        font-size: 14px;
-        border-radius: 13px
-    }
+    .tooltip {
+  display: contents;
+  border-bottom: 1px dotted black;
+}
 
-    .save_button {
-        background-color: #00409f;
-        border: 1px solid #00409f;
-        color: #fff;
-        padding: 7px 10px;
-        margin: auto;
-        text-align: center;
-        font-size: 14px;
-        border-radius: 13px
-    }
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 290px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  margin-top: 3px;
+  margin-left: 102px;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
 
-
-    .label-file {
-        display: block;
-        margin: 0 auto;
-        padding: 7px 10px;
-        background-color: #00409f;
-        color: #fff;
-        border-radius: 13px;
-        font-size: 14px;
-        text-align: center;
-    } */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+   
     
-    }
+    
 </style>
 
 <div class="main-panel " id="demo">
@@ -206,9 +196,9 @@
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-3 col-3">
                                 <div class="d-flex justify-content-between align-items-center experience">
-                                    <a href="{% url 'web:upgrade_plan' %}">
-                                        <button class="editbtn" id="chatBtn"><i class="fa-solid fa-sack-dollar"></i>
-                                            Plan</button>
+                                    <a href="{% url 'web:add_on_services' %}">
+                                        <button class="editbtn" id="chatBtn"><i class="fa-solid fa-person-circle-plus"></i>
+                                            Add-on Services</button>
                                     </a>
                                 </div>
                             </div>
@@ -236,7 +226,7 @@
         <div class="row">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="branding_image_uploading">
+                <div class="branding_image_uploading ">
                     {% if uploaded_branding_image.image %}
                     <img src="{{uploaded_branding_image.image.url}}" style="width: 100%;" class="responsive-size">
                     {% else %}
@@ -249,9 +239,12 @@
                 {% csrf_token %}
                 <div class="col-lg-12">
                     <div class="row">
-                        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+                        <div class="col-lg-2 col-md-3 col-sm-4 col-4 tooltip">
+                            <span class="tooltiptext">Upload image with size 1080px * 222px</span>
                             <label class="label-file">{{branding_image_form.image}} Upload Image</label>
+                
                         </div>
+                      
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4">
                             <input type="submit" value="Save Uploaded Image" class="save_button">
                         </div>
@@ -263,6 +256,7 @@
                                 </a>
                         </div>
                     </div>
+                    
                 </div>
             </form>
 
