--- a/static/invoice/css/style.css
+++ b/static/invoice/css/style.css
@@ -458,7 +458,7 @@ a {
 }
 
 a:hover {
-  color: #007aff;
+  color: #2d3d83;
 }
 
 button {
@@ -524,7 +524,7 @@ kbd {
 }
 
 a:hover {
-  color: #007aff;
+  color: #2d3d83;
 }
 
 ul {
@@ -874,12 +874,12 @@ ul {
 
 .tm_accent_color,
 .tm_accent_color_hover:hover {
-  color: #007aff;
+  color: #2d3d83;
 }
 
 .tm_accent_bg,
 .tm_accent_bg_hover:hover {
-  background-color: #007aff;
+  background-color: #2d3d83;
 }
 
 .tm_accent_bg_10 {
@@ -944,7 +944,7 @@ ul {
 }
 
 .tm_accent_border {
-  border-color: #007aff;
+  border-color: #2d3d83;
 }
 
 .tm_accent_border_10 {
@@ -1969,7 +1969,7 @@ hr {
 
   .tm_invoice_btn.tm_color1 {
     background-color: rgba(0, 122, 255, 0.1);
-    color: #007aff;
+    color: #2d3d83;
     border-radius: 5px 5px 0 0;
   }
 
@@ -2050,7 +2050,7 @@ hr {
 
   .tm_invoice_btn.tm_color1 {
     background-color: rgba(0, 122, 255, 0.1);
-    color: #007aff;
+    color: #2d3d83;
   }
 
   .tm_invoice_btn.tm_color1:hover {
@@ -2438,7 +2438,7 @@ hr {
   }
 
   .tm_accent_bg {
-    background-color: #007aff;
+    background-color: #2d3d83;
     -webkit-print-color-adjust: exact;
   }
 
@@ -2458,7 +2458,7 @@ hr {
   }
 
   .tm_accent_color {
-    color: #007aff !important;
+    color: #2d3d83 !important;
     -webkit-print-color-adjust: exact;
   }
 
