--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -25,12 +25,13 @@
                             <div class="tm_logo"><img src="{% static 'invoice/img/logo.svg' %}" alt="Logo"></div>
                         </div>
                         <div class="tm_invoice_right tm_text_right tm_mobile_hide">
-                            <div class="tm_f50 tm_text_uppercase tm_white_color">{{invoice.invoice_name}}</div>
+                            <div class="tm_f50 tm_text_uppercase tm_white_color">{{invoice.invoice_no}}</div>
                         </div>
                         <div class="tm_shape_bg tm_accent_bg tm_mobile_hide"></div>
                     </div>
                     <div class="tm_invoice_info tm_mb25">
-
+                        <div class="tm_card_note tm_mobile_hide">
+                        </div>
                         <div class="tm_invoice_info_list tm_white_color">
                             <p class="tm_invoice_number tm_m0">Invoice No: <b>{{ invoice.invoice_no }}</b></p>
                             <p class="tm_invoice_date tm_m0">Date: <b>{{invoice.created}}</b></p>
@@ -46,22 +47,17 @@
                                 {{invoice.customer.email}}
                             </p>
 
-                                {% for item in invoice.get_invoiceitem %}
-                                <p>
-                                    Username : {{item.username}} <br>
-                                    Password : {{item.password}}
-                                </p>
-                                {% endfor %}
 
                         </div>
 
                         <div class="tm_invoice_right tm_text_right">
                             <p class="tm_mb2"><b class="tm_primary_color">Pay To:</b></p>
                             <p>
-                                Laralink Ltd <br>
-                                86-90 Paul Street, London<br>
-                                England EC2A 4NE <br>
-                                demo@gmail.com
+                                {{request.user.name}} <br>
+                                {{request.user.shop_address}}<br>
+                                {{request.user.district}}<br>
+                                {{request.user.email}} <br>
+                                {{request.user.phone}}
                             </p>
                         </div>
                     </div>
@@ -72,7 +68,8 @@
                                     <thead>
                                         <tr class="tm_accent_bg">
                                             <th class="tm_width_3 tm_semi_bold tm_white_color">Item</th>
-                                            <th class="tm_width_4 tm_semi_bold tm_white_color">Description</th>
+                                            <th class="tm_width_4 tm_semi_bold tm_white_color">Username</th>
+                                            <th class="tm_width_4 tm_semi_bold tm_white_color">Password</th>
                                             <th class="tm_width_2 tm_semi_bold tm_white_color">Price</th>
                                             <th class="tm_width_1 tm_semi_bold tm_white_color">Qty</th>
                                             <th class="tm_width_2 tm_semi_bold tm_white_color tm_text_right">Total</th>
@@ -83,7 +80,8 @@
                                         {% for item in invoice.get_invoiceitem %}
                                         <tr>
                                             <td class="tm_width_3">1. {{ item.services_name }}</td>
-                                            <td class="tm_width_4">{{item.descripton}}</td>
+                                            <td class="tm_width_3">{{item.username}}</td>
+                                            <td class="tm_width_3">{{item.password}}</td>
                                             <td class="tm_width_2">&#8377;{{item.services_charge}}</td>
                                             <td class="tm_width_1">{{item.qty}}</td>
                                             <td class="tm_width_2 tm_text_right">${{item.sub_total}}</td>
