--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,6 +5,23 @@
 {% block content %}
 {% csrf_token %}
 
+
+<style>
+    .whats-link {
+    position: fixed !important;
+    display: inline-block;
+    bottom: 15%;
+    right: -225px;
+    color: rgb(243, 243, 243) !important;
+    border-radius: 20px 0px 0 20px;
+    padding: 5px;
+    font-size: 11px !important;
+
+}
+.whatsapp-icon{
+    width: 8%;
+}
+</style>
 <div class="row mt-4">
     <div class="col-md-5 p-4 shadow-sm border rounded-5 border-primary login-form mx-auto">
         <h2 class="text-center mb-4 login-head">Login Form</h2>
@@ -53,6 +70,7 @@
     </div>
 </div>
 
-
+<a href="https://wa.me/919895676161" class="whats-link">
+    <img src="{% static 'web/images/whatsapp.png' %}" class="whatsapp-icon"> </a>
 
 {% endblock %}
