logo,dowmload and signature removed. #invoice_issue_fixes

--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -22,7 +22,7 @@
                 <div class="tm_invoice_in">
                     <div class="tm_invoice_head tm_top_head tm_mb15 tm_align_center">
                         <div class="tm_invoice_left">
-                            <div class="tm_logo"><img src="{% static 'invoice/img/logo.svg' %}" alt="Logo"></div>
+                            <div class="tm_logo"><img src="{{request.user.profile_image.url}}" alt="Logo"></div>
                         </div>
                         <div class="tm_invoice_right tm_text_right tm_mobile_hide">
                             <div class="tm_f50 tm_text_uppercase tm_white_color">{{invoice.invoice_no}}</div>
@@ -133,6 +133,7 @@
                                 </table>
                             </div>
                         </div>
+                        {% comment %}
                         <div class="tm_invoice_footer tm_type1">
                             <div class="tm_left_footer"></div>
                             <div class="tm_right_footer">
@@ -143,6 +144,7 @@
                                 </div>
                             </div>
                         </div>
+                        {% endcomment %}
                     </div>
                     <div class="tm_note tm_text_center tm_font_style_normal">
                         <hr class="tm_mb15">
@@ -183,6 +185,10 @@
             </div>
         </div>
     </div>
+    <script src="{% static 'invoice/js/jquery.min.js' %}"></script>
+    <script src="{% static 'invoice/js/jspdf.min.js' %}"></script>
+    <script src="{% static 'invoice/js/html2canvas.min.js' %}"></script>
+    <script src="{% static 'invoice/js/main.js' %}"></script>
 </body>
 
 </html>
