--- a/templates/web/invoice-searching.html
+++ b/templates/web/invoice-searching.html
@@ -118,6 +118,7 @@
                                     </table>
                                 </div>
                             </div>
+                            {% comment %}
                             <div class="tm_invoice_footer tm_type1">
                                 <div class="tm_left_footer"></div>
                                 <div class="tm_right_footer">
@@ -128,6 +129,7 @@
                                     </div>
                                 </div>
                             </div>
+                            {% endcomment %}
                         </div>
                         <div class="tm_note tm_text_center tm_font_style_normal">
                             <hr class="tm_mb15">
