--- a/templates/web/profile-update.html
+++ b/templates/web/profile-update.html
@@ -16,6 +16,12 @@
                 </form>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12 col-12">
+                <h6>Note</h6>
+                <p>You can change only your logo.If you want to change your name,phone number,e-mail id,shop name,shop addess,district,pincode or category please contact with this number <span><a href="tel:+919539438918">+91 9539438918</a></span></p>
+            </div>
+        </div>
     </div>
 </div>
 
