--- a/templates/web/invoice-searching.html
+++ b/templates/web/invoice-searching.html
@@ -31,7 +31,7 @@
                     <div class="tm_invoice_in">
                         <div class="tm_invoice_head tm_top_head tm_mb15 tm_align_center">
                             <div class="tm_invoice_left">
-                                <div class="tm_logo"><img src="{% static 'invoice/img/logo.svg' %}" alt="Logo"></div>
+                                <div class="tm_logo"><img src="{{request.user.profile_image.crop.105x80}}" alt="Logo"></div>
                             </div>
                             <div class="tm_invoice_right tm_text_right tm_mobile_hide">
                                 <div class="tm_f50 tm_text_uppercase tm_white_color">{{customer.invoice.invoice_no}}</div>
