--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -3,50 +3,39 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>USKLOGIN.COM</title>
-  <!-- plugins:css -->
   <link rel="stylesheet" href="{% static 'web/vendors/mdi/css/materialdesignicons.min.css' %}">
   <link rel="stylesheet" href="{% static 'web/vendors/css/vendor.bundle.base.css' %}">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <!-- endinject -->
-  <!-- Layout styles -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-
-  <!-- End layout styles -->
   <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
-
-
   <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
-  <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
-
-  <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
-
-
+  {% block css_plugins %}{% endblock %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
+  <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'web/css/custom.css' %}">
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
   <script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "3d531d32-fe15-4b93-80b3-0746517b0021",
-      safari_web_id: "web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063",
-      notifyButton: {
-        enable: true,
-      },
+    window.OneSignal = window.OneSignal || [];
+    OneSignal.push(function () {
+      OneSignal.init({
+        appId: "3d531d32-fe15-4b93-80b3-0746517b0021",
+        safari_web_id: "web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063",
+        notifyButton: {
+          enable: true,
+        },
+      });
     });
-  });
   </script>
 
 </head>
 
-<body>
+<body style="background-color:#f2edf3;">
 
+  {% block body %}
 
   <div class="container-scroller">
     {% include 'web/partials/header.html' %}
@@ -61,9 +50,9 @@
     {% include 'web/partials/footer.html' %}
 
   </div>
+  {% endblock %}
 
 
-  <!-- container-scroller -->
 
   <!-- plugins:js -->
   <script src="{% static 'web/vendors/js/vendor.bundle.base.js' %}"></script>
@@ -78,12 +67,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.15.3/dist/sweetalert2.all.min.js"></script>
   <script src="{% static 'web/js/main.js' %}"></script>
-
   <script src="{% static 'web/js/search.js' %}"></script>
   <script src="{% static 'web/js/invoice_search.js' %}"></script>
 
-  {% block js %}
-  {% endblock %}
+  {% block js %}{% endblock %}
 
 
 </body>
