--- a/templates/web/callback.html
+++ b/templates/web/callback.html
@@ -1,90 +1,19 @@
+{% extends 'web/base.html' %}
 {% load static %}
-
-{% csrf_token %}
-<!DOCTYPE html>
-<html lang="en">
-
-<!-- {% url 'web:index' %}  11:18:01 GMT -->
-
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>USKLOGIN.COM</title>
-  <!-- plugins:css -->
-  <link rel="stylesheet" href="{% static 'web/vendors/mdi/css/materialdesignicons.min.css' %}">
-  <link rel="stylesheet" href="{% static 'web/vendors/css/vendor.bundle.base.css' %}">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <!-- endinject -->
-  <!-- Layout styles -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  <!-- End layout styles -->
-  <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
-  <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
-  <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
-
-  <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
-</head>
-
-<body style="background-color:#f2edf3 ;">
-
-  <div class="success-card">
-    <div class="svg-container">
-      <svg class="ft-green-tick" xmlns="http://www.w3.org/2000/svg" height="100" width="100" viewBox="0 0 48 48"
-        aria-hidden="true">
-        <circle class="circle" fill="#5bb543" cx="24" cy="24" r="22" />
-        <path class="tick" fill="none" stroke="#FFF" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"
-          stroke-miterlimit="10" d="M14 27l5.917 4.917L34 17" />
-      </svg>
-    </div>
-    <div class="success-content">
-      <h4>Congratulations, your account has been successfully Upgraded.</h4>
-    </div>
-    <a href="{% url 'auth_login' %}" id="contBtn">Continue</a>
+{% block body %}
+<div class="success-card">
+  <div class="svg-container">
+    <svg class="ft-green-tick" xmlns="http://www.w3.org/2000/svg" height="100" width="100" viewBox="0 0 48 48"
+      aria-hidden="true">
+      <circle class="circle" fill="#5bb543" cx="24" cy="24" r="22" />
+      <path class="tick" fill="none" stroke="#FFF" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"
+        stroke-miterlimit="10" d="M14 27l5.917 4.917L34 17" />
+    </svg>
   </div>
+  <div class="success-content">
+    <h4>Congratulations, your account has been successfully Upgraded.</h4>
+  </div>
+  <a href="{% url 'auth_login' %}" id="contBtn">Continue</a>
+</div>
 
-
-
-
-
-  <!-- container-scroller -->
-  <!-- plugins:js -->
-  <script src="{% static 'web/vendors/js/vendor.bundle.base.js' %}"></script>
-  <!-- endinject -->
-  <!-- Plugin js for this page -->
-  <script src="{% static 'web/vendors/chart.js/Chart.min.js' %}"></script>
-  <script src="{% static 'web/js/jquery.cookie.js' %}" type="text/javascript"></script>
-  <!-- End plugin js for this page -->
-  <!-- inject:js -->
-  <script src="{% static 'web/js/off-canvas.js' %}"></script>
-  <script src="{% static 'web/js/hoverable-collapse.js' %}"></script>
-  <script src="{% static 'web/js/misc.js' %}"></script>
-  <!-- endinject -->
-  <script src="{% static 'web/js/owl.carousel.min.js' %}"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <script src="{% static 'web/js/main.js' %}"></script>
-  <!-- Custom js for this page -->
-  <script src="{% static 'web/js/dashboard.js' %}"></script>
-  <script src="{% static 'web/js/todolist.js' %}"></script>
-
-  <!-- End custom js for this page -->
-
-
-
-
-</body>
-
-</html>
+{% endblock %}
