--- a/templates/web/certificate.html
+++ b/templates/web/certificate.html
@@ -1,126 +1,90 @@
+{% extends 'web/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% block body %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>USKLOGIN.COM</title>
-  <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
-  <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
-  <link href="https://fonts.cdnfonts.com/css/wilson-hawk" rel="stylesheet">
-  <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
-  <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-
-</head>
-
-<body>
-  <div class="container">
-    <div class="certificate-bg">
-      <div class="ombre-externe" id="certificate">
-        <div class="peinture-ombre-interne-fine">
-          <div class="row">
-            <div class="col-lg-4  text-start">
-              <img src="{% static 'web/images/USK Login Logo.png' %}" class="usk-logo-certificate">
-            </div>
-            <div class="col-lg-4 offset-md-4">
-              <img src="{% static 'web/images/Bruvsha Logo.png' %}" class="usk-logo-certificate">
-            </div>
+<div class="container">
+  <div class="certificate-bg">
+    <div class="ombre-externe" id="certificate">
+      <div class="peinture-ombre-interne-fine">
+        <div class="row">
+          <div class="col-lg-4  text-start">
+            <img src="{% static 'web/images/USK Login Logo.png' %}" class="usk-logo-certificate">
           </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="certificate-head-bg">
-                <h1 class="creatificate-head">Certificate Of Association</h1>
-              </div>
-            </div>
+          <div class="col-lg-4 offset-md-4">
+            <img src="{% static 'web/images/Bruvsha Logo.png' %}" class="usk-logo-certificate">
           </div>
-          <div class="row">
-            <div class="col-lg-3">
-              <span class="date">Joined Date : </span><span>&nbsp;{{request.user.created}}</span>
-            </div>
-            <div class="col-lg-3 offset-md-6">
-              <span class="date">Usk Id : </span><span>&nbsp;{{request.user.id}}</span>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="my-4">
-                <p class="certificate-present">The Certificate is Presented to :-</p>
-              </div>
-              <div class="hr-margin">
-                <span class="username">{{request.user.name}}</span>
-                <hr class="certificate-hr">
-              </div>
-              <div class="mt-4">
-                <p class="certificate-present-left">Is an Authorized Agent of USKLOGIN.com</p>
-              </div>
-            </div>
-          </div>
-          <div class="row mt-5">
-            <div class="col-lg-4">
-              <div class="row">
-                <div class="col-lg-6">
-                  <p class="agent-details text-end">Shop Name :</p>
-                </div>
-                <div class="col-lg-6 text-start">
-                  <span>{{request.user.shop_name}}</span>
-                </div>
-                <div class="col-lg-6">
-                  <p class="agent-details text-end">District :</p>
-                </div>
-                <div class="col-lg-6 text-start">
-                  <span>{{request.user.district}}</span>
-                </div>
-                <div class="col-lg-6">
-                  <p class="agent-details text-end">Pincode :</p>
-                </div>
-                <div class="col-lg-6 text-start">
-                  <span>{{request.user.pincode}}</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <img src="{% static 'web/images/Seal.png' %}" class="seal-image">
-            </div>
-            <div class="col-lg-4">
-              <img src="{% static 'web/images/Sign.png' %}" class="sign-image">
-            </div>
-          </div>
-          <div class="footer-foot"></div>
         </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="certificate-head-bg">
+              <h1 class="creatificate-head">Certificate Of Association</h1>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3">
+            <span class="date">Joined Date : </span><span>&nbsp;{{request.user.created}}</span>
+          </div>
+          <div class="col-lg-3 offset-md-6">
+            <span class="date">Usk Id : </span><span>&nbsp;{{request.user.id}}</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="my-4">
+              <p class="certificate-present">The Certificate is Presented to :-</p>
+            </div>
+            <div class="hr-margin">
+              <span class="username">{{request.user.name}}</span>
+              <hr class="certificate-hr">
+            </div>
+            <div class="mt-4">
+              <p class="certificate-present-left">Is an Authorized Agent of USKLOGIN.com</p>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-4">
+            <div class="row">
+              <div class="col-lg-6">
+                <p class="agent-details text-end">Shop Name :</p>
+              </div>
+              <div class="col-lg-6 text-start">
+                <span>{{request.user.shop_name}}</span>
+              </div>
+              <div class="col-lg-6">
+                <p class="agent-details text-end">District :</p>
+              </div>
+              <div class="col-lg-6 text-start">
+                <span>{{request.user.district}}</span>
+              </div>
+              <div class="col-lg-6">
+                <p class="agent-details text-end">Pincode :</p>
+              </div>
+              <div class="col-lg-6 text-start">
+                <span>{{request.user.pincode}}</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <img src="{% static 'web/images/Seal.png' %}" class="seal-image">
+          </div>
+          <div class="col-lg-4">
+            <img src="{% static 'web/images/Sign.png' %}" class="sign-image">
+          </div>
+        </div>
+        <div class="footer-foot"></div>
       </div>
     </div>
-
-    <a href="{% url 'web:pdf_certificate' %}" id="print-button">
-      <div class="download-button">
-        Download
-      </div>
-    </a>
-
-
   </div>
 
+  <a href="{% url 'web:pdf_certificate' %}" id="print-button">
+    <div class="download-button">
+      Download
+    </div>
+  </a>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-      $(document).ready(function(){
-        $('#print-button').click(function(){
-          $('#certificate').printThis();
-        })
-      })
-    </script> -->
-</body>
 
-</html>
+</div>
+
+{% endblock %}
