--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1,61 +1,13 @@
 {% extends 'web/base.html' %}
+{% load static humanize %}
+
 {% block content %}
-{% load static %}
-{% load humanize %}
+
+{% csrf_token %}
 
 
-{% csrf_token %} 
-<!-- search -->
-
-<style>
-  .detail-button{
-   background-color: #008b92;
-   border: 1px solid #008b92;
-   border-radius: 4px;
-   width: 60%;
-   margin: 2px auto;
-}
-
-@media only screen and (min-width: 320px) and (max-width:567px){
-  .detail-button{
-   background-color: #008b92;
-   border: 1px solid #008b92;
-   border-radius: 4px;
-   width: 76% !important;
-   margin: 2px auto;
-}
-}
-
-@media only screen and (min-width: 568px) and (max-width:768px){
-  .detail-button{
-   background-color: #008b92;
-   border: 1px solid #008b92;
-   border-radius: 4px;
-   width: 66% !important;
-   margin: 2px auto;
-}
-}
-</style>
-
-
-<!--  -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<!-- partial -->
 <div class="main-panel " id="demo">
   <div class="content-wrapper" id="demo2">
-
-
-    <!-- {% if messages %}
-    <div class="messages text-center success-message" id="sucessful-login-message">
-      {% for message in messages %}
-      <div {% if message.tags %} class="{{ message.tags }}" {% endif %}>
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
-        {{ message }}
-      </div>  
-      {% endfor %}
-    </div>
-    {% endif %} -->
 
 
 
@@ -114,13 +66,12 @@
       <div class="container">
         {% if branding_image.image %}
         <img src="{{branding_image.image.crop.1000x100}}" id="footerImage" alt="Image">
-       {% else %}
-       <h4>....</h4>
-       {% endif %}
-       
+        {% else %}
+        <h4>....</h4>
+        {% endif %}
+
       </div>
     </div>
-
 
     <!-- new services -->
     <section class="py-5">
@@ -161,9 +112,6 @@
         </div>
       </div>
 
-
-
-
     </section>
 
     <!-- importants -->
@@ -173,7 +121,6 @@
 
         <div class="row">
           {% for posters in important_poster %}
-
 
           <div class="col-lg-3 col-md-4 col-sm-6 col-6">
             <div class="container__img-holder">
@@ -191,8 +138,7 @@
           </div>
 
           {% endfor %}
-          
-      
+
         </div>
       </div>
     </section>
@@ -200,26 +146,13 @@
   <!-- content-wrapper ends -->
 
 </div>
-<!-- main-panel ends -->
-
 
 {% endblock %}
-<!-- ===============successful login message  -->
 
 
 
 
 {% block js %}
-
-<!-- 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-<script>
-  $(document).ready(function () {
-    $('#sucessful-login-message').fadeOut(3000)
-  })  
-</script> -->
-
-
 <script>
   function downloadImage(elm) {
     var canvas = document.createElement('canvas');
@@ -278,7 +211,7 @@
         a = (a ? (a = "preload", n.href = e, n.rel = t ? i + a : a, t || (n.as = "script")) : (n.src = e, t && (n.type = i, n.onerror = function () {
           return d()
         })), o && o.nonce ? o.nonce : null);
-      a && (n.nonce = a), y.appendChild👎
+      a && (n.nonce = a), y.appendChild(n)
     }, "function" == typeof (e = "".matchAll) && e.toString().includes("[native code]") ? (t = a + (m ? "" : "svg/"), d((e = l + (m ? "" : "modules/")) + "core" + p + ".js", !0), a = document.createElement("link").relList.supports(
       "modulepreload"), n.overlays && n.overlays.length && a && d(e + "overlays" + p + ".js", !0, !0), r.querySelector('.a2a_dd:empty,.a2a_kit [class*="a2a_button_"]:empty') && d(t + "icons.31.svg.js", !1, !0)) : d(), u = function (
         e) {
@@ -301,10 +234,6 @@
       }, "loading" !== r.readyState ? m() : (r.addEventListener("readystatechange", m), r.addEventListener("DOMContentLoaded", m))))
   }(document, window);
 </script>
-
-
-
-
 
 
 {% endblock %}
