--- a/templates/web/login.html
+++ b/templates/web/login.html
@@ -33,7 +33,7 @@
                         <label class="form-label">Password</label>
                         <input type="text" name="password" class="form-control border border-primary" required>
                     </div>
-                    <p class="small"><a class="text-primary" href="{% url 'web:forgot_password' %}">Forgot password?</a>
+                    <p class="small"><a class="text-primary" href="{% url 'auth_password_reset' %}">Forgot password?</a>
                     </p>
                     <div class="d-grid">
                         <button class="btn btn-login" type="submit">Login</button>
@@ -62,8 +62,6 @@
         </div>
 
     </div>
-
-
 
 </body>
 
