--- a/templates/web/paymentsuccess.html
+++ b/templates/web/paymentsuccess.html
@@ -1,184 +1,104 @@
+{% extends 'web/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% block body %}
 
-<!-- {% url 'web:index' %}  11:18:01 GMT -->
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>USKLOGIN.COM</title>
-    <!-- plugins:css -->
-    <link rel="stylesheet" href="{% static 'web/vendors/mdi/css/materialdesignicons.min.css' %}">
-    <link rel="stylesheet" href="{% static 'web/vendors/css/vendor.bundle.base.css' %}">
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
-    <!-- Layout styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- End layout styles -->
-    <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
-    <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
-
-    <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
-
-    <style>
-        .status {
-            text-align: center;
-            color: rgb(0, 0, 0);
-            margin: 250px 0px;
-        }
-
-    </style>
-</head>
-
-<body style="background-color:#f2edf3 ;">
-
-    <div class="container">
-        {% comment %}
-        <div class="row">
-            <form method="POST" id="form">
-                {% csrf_token %}
-                <h1 class="status">Successful Payment </h1>
-            </form>
-
+<div class="container">
+    <div class="message">
+        <div class="check">
+            &#10004;
         </div>
-        {% endcomment %}
-        <div class="b"></div>
-        <div class="bb"></div>
-        <div class="message">
-            <div class="check">
-                &#10004;
-            </div>
-            <p>
-                Success
-            </p>
-            <p>
-                Check your email for a booking confirmation. We'll see you soon!
-            </p>
-            <button id="ok">
-                OK
-            </button>
-        </div>
-
+        <p>
+            Success
+        </p>
+        <p>
+            Check your email for a booking confirmation. We'll see you soon!
+        </p>
+        <button id="ok">
+            OK
+        </button>
     </div>
 
+</div>
 
+{% endblock %}
 
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="{% static 'web/vendors/js/vendor.bundle.base.js' %}"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <script src="{% static 'web/vendors/chart.js/Chart.min.js' %}"></script>
-    <script src="{% static 'web/js/jquery.cookie.js' %}" type="text/javascript"></script>
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="{% static 'web/js/off-canvas.js' %}"></script>
-    <script src="{% static 'web/js/hoverable-collapse.js' %}"></script>
-    <script src="{% static 'web/js/misc.js' %}"></script>
-    <!-- endinject -->
-    <script src="{% static 'web/js/owl.carousel.min.js' %}"></script>
+{% block js %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="{% static 'web/js/main.js' %}"></script>
-    <!-- Custom js for this page -->
-    <script src="{% static 'web/js/dashboard.js' %}"></script>
-    <script src="{% static 'web/js/todolist.js' %}"></script>
+<script>
+    $(document).on('submit', 'form.ajax', function (e) {
+        e.preventDefault();
+        var $this = $(this);
+        var data = new FormData(this);
+        var action_url = $this.attr('action');
+        var reset = $this.hasClass('reset');
+        var reload = $this.hasClass('reload');
+        var redirect = $this.hasClass('redirect');
+        var redirect_url = $this.attr('data-redirect');
 
-    <!-- End custom js for this page -->
+        $.ajax({
+            url: action_url,
+            type: 'POST',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+            dataType: "json",
 
-    <script>
-        $(document).on('submit', 'form.ajax', function (e) {
-            e.preventDefault();
-            var $this = $(this);
-            var data = new FormData(this);
-            var action_url = $this.attr('action');
-            var reset = $this.hasClass('reset');
-            var reload = $this.hasClass('reload');
-            var redirect = $this.hasClass('redirect');
-            var redirect_url = $this.attr('data-redirect');
+            success: function (data) {
 
-            $.ajax({
-                url: action_url,
-                type: 'POST',
-                data: data,
-                cache: false,
-                contentType: false,
-                processData: false,
-                dataType: "json",
+                var status = data.status;
+                var title = data.title;
+                var message = data.message;
+                var pk = data.pk;
 
-                success: function (data) {
-
-                    var status = data.status;
-                    var title = data.title;
-                    var message = data.message;
-                    var pk = data.pk;
-
-                    if (status == "true") {
-                        if (title) {
-                            title = title;
-                        } else {
-                            title = "Success";
-                        }
-
-                        Swal.fire({
-                            title: title,
-                            html: message,
-                            icon: 'success',
-                        }).then(function () {
-                            if (redirect) {
-                                window.location.href = redirect_url;
-                            }
-                            if (reload) {
-                                window.location.reload();
-                            }
-                            if (reset) {
-                                window.location.reset();
-                            }
-                        });
-
+                if (status == "true") {
+                    if (title) {
+                        title = title;
                     } else {
-                        if (title) {
-                            title = title;
-                        } else {
-                            title = "An Error Occurred";
-                        }
-                        Swal.fire({
-                            title: title,
-                            html: message,
-                            icon: "error"
-                        });
-
+                        title = "Success";
                     }
-                },
-                error: function (data) {
-                    var title = "An error occurred";
-                    var message = "something went wrong";
+
+                    Swal.fire({
+                        title: title,
+                        html: message,
+                        icon: 'success',
+                    }).then(function () {
+                        if (redirect) {
+                            window.location.href = redirect_url;
+                        }
+                        if (reload) {
+                            window.location.reload();
+                        }
+                        if (reset) {
+                            window.location.reset();
+                        }
+                    });
+
+                } else {
+                    if (title) {
+                        title = title;
+                    } else {
+                        title = "An Error Occurred";
+                    }
                     Swal.fire({
                         title: title,
                         html: message,
                         icon: "error"
                     });
+
                 }
-            });
+            },
+            error: function (data) {
+                var title = "An error occurred";
+                var message = "something went wrong";
+                Swal.fire({
+                    title: title,
+                    html: message,
+                    icon: "error"
+                });
+            }
         });
-    </script>
+    });
+</script>
+{% endblock %}
 
-
-</body>
-
-</html>
