--- a/templates/web/service-details.html
+++ b/templates/web/service-details.html
@@ -1,10 +1,11 @@
 {% extends 'web/base.html' %}
-{% block content %}
 {% load static %}
 
-
+{% block css_plugins %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-<!-- partial -->
+{% endblock %}
+
+{% block content %}
 <div class="main-panel " id="demo">
     <div class="content-wrapper" id="demo2">
         <div class="row ">
@@ -44,17 +45,15 @@
                             : <span> &#8377; {{services.actual_service_charge}} </span>
                         </div>
                     </div>
-
-
                 </ul>
             </div>
-
 
             <div class="col-lg-6 col-md-6 col-sm-12 col-12 ">
                 <a href="" class="btn-video">
                     <div class="service-detail-button text-center">
                         <!-- <span>Video Tutorial</span> -->
-                        <a href="https://youtube.com/watch?v={{services.video_tutorial}}" class="youtube">Video Tutorial</a>
+                        <a href="https://youtube.com/watch?v={{services.video_tutorial}}" class="youtube">Video
+                            Tutorial</a>
                     </div>
                 </a>
 
@@ -81,37 +80,21 @@
     </div>
 </div>
 
-
-
-
 {% endblock %}
 
 {% block js %}
-
-
-<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-
-<!-- Magnific Popup core JS file -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js" integrity="sha512-C1zvdb9R55RAkl6xCLTPt+Wmcz6s+ccOvcr6G57lbm8M2fbgn2SUjUJbQ13fEyjuLViwe97uJvwa1EUf4F1Akw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
 <script>
-    
-    $(document).ready(function() {
-    $('.youtube, .popup-vimeo, .popup-gmaps').magnificPopup({
-        disableOn: 700,
-        type: 'iframe',
-        mainClass: 'mfp-fade',
-        removalDelay: 160,
-        preloader: false,
+    $(document).ready(function () {
+        $('.youtube, .popup-vimeo, .popup-gmaps').magnificPopup({
+            disableOn: 700,
+            type: 'iframe',
+            mainClass: 'mfp-fade',
+            removalDelay: 160,
+            preloader: false,
 
-        fixedContentPos: false
-    });
-}); 
-
+            fixedContentPos: false
+        });
+    }); 
 </script>
-
-
-
 {% endblock %}
