--- a/templates/web/upgrade-request.html
+++ b/templates/web/upgrade-request.html
@@ -1,10 +1,8 @@
 {% extends 'web/base.html' %}
-{% block content %}
 {% load static %}
-
-<style>
+% block css_plugins %<style>
     body {
-        --primary: 25,91,255;
+        --primary: 25, 91, 255;
         --color: 44, 62, 80;
         --bg: 255, 255, 255;
         --red: 255, 0, 78;
@@ -15,6 +13,7 @@
         color: rgb(var(--color));
         width: 100%;
     }
+
     * {
         list-style: none;
         outline: none;
@@ -23,20 +22,23 @@
         font-family: 'Open Sans', sans-serif;
         box-sizing: border-box;
     }
+
     b {
         padding: 0px 4px;
         display: inline-block;
     }
+
     .con-items {
         display: flex;
         align-items: center;
         justify-content: center;
         height: auto;
     }
+
     .item {
         width: 360px;
         background: #fff;
-        box-shadow: 0px 5px 30px 0px rgba(0,0,0,.05);
+        box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, .05);
         border-radius: 40px;
         margin: 0px;
         padding: 30px;
@@ -47,47 +49,60 @@
         transition: all .25s ease;
         position: relative;
     }
-    .item:not(.color):hover{
+
+    .item:not(.color):hover {
         transform: scale(1.05);
     }
-    .item:hover .con-img{
+
+    .item:hover .con-img {
         transform: scale(1.15);
     }
+
     .item.color:hover {
         transform: scale(1.15);
     }
+
     .con-img {
         display: flex;
         align-items: center;
         justify-content: center;
         transition: all .25s ease;
     }
+
     .con-img img {
         width: 130px;
     }
+
     .item1 {
         padding-right: 45px;
     }
+
     .item2 {
         z-index: 100;
     }
+
     .item3 {
         padding-left: 45px;
     }
+
     .item.color {
         background: #3dcbab;
         color: #fff;
         transform: scale(1.1);
     }
+
     .item.color li {
-        color: rgba(255,255,255,.75);
+        color: rgba(255, 255, 255, .75);
     }
+
     .item.color li b {
-        color: rgba(255,255,255,1);
+        color: rgba(255, 255, 255, 1);
     }
+
     .item.color li i {
-        color: rgba(255,255,255,1);
+        color: rgba(255, 255, 255, 1);
     }
+
     .item header {
         display: flex;
         align-items: center;
@@ -96,12 +111,15 @@
         position: relative;
         width: 100%;
     }
+
     .item header h3 {
         font-size: 2rem;
     }
+
     .item header p {
         font-size: 1.2rem;
     }
+
     .badge {
         position: absolute;
         top: 20px;
@@ -113,11 +131,13 @@
         font-weight: bold;
         font-size: .85rem;
     }
+
     .item ul {
         padding: 20px 0px;
         flex: 1;
         width: 100%;
     }
+
     .item ul li {
         width: 100%;
         padding: 10px;
@@ -127,14 +147,17 @@
         text-align: left;
         color: rgb(var(--color), .5)
     }
+
     .item ul li b {
         color: rgb(var(--color), 1)
     }
+
     .item ul li i {
         font-size: 1.6rem;
         margin-right: 15px;
         color: rgb(var(--color), 1)
     }
+
     .item a {
         padding: 14px 20px;
         width: 100%;
@@ -148,31 +171,32 @@
         cursor: pointer;
         transition: all .25s ease;
     }
+
     .item a:not(.border):hover {
-        transform: translate(0,5px);
+        transform: translate(0, 5px);
         box-shadow: 0px 0px 0px 0px rgba(61, 203, 171, .35);
     }
+
     .item a.border {
         border: 3px solid #fff;
     }
+
     .item a.border:hover {
         background: #fff;
         color: rgb(61, 203, 171);
     }
 </style>
+{% endblock %}
+
+{% block content %}
 <div class="main-panel " id="demo">
     <div class="content-wrapper" id="demo2">
         <div class="row">
-            <!-- <div class="col-lg-12">
-                <p>To get this feature upgrade your plan now!</p>
-            </div>
-            <div class="col-lg-12">
 
-            </div> -->
             <div class="con-items ">
-               
+
                 <div class="item color item2">
-                
+
                     <header>
                         <h3>Upgrade Your Plan</h3>
                         <p>
@@ -182,15 +206,15 @@
                         </p>
                     </header>
                     <ul>
-                        <li> 
+                        <li>
                             <i class='bx bx-check'></i>
                             All features in <b>Basic</b>
                         </li>
-                        <li> 
+                        <li>
                             <i class='bx bx-check'></i>
                             Flexible <b>call scheduling</b>
                         </li>
-                        <li> 
+                        <li>
                             <i class='bx bx-check'></i>
                             <b>15 TB</b> cloud storage
                         </li>
@@ -200,7 +224,7 @@
                     </button> -->
                     <a href="{% url 'web:upgrade_plan' %}" class="border" style="text-align: center;">Upgrade</a>
                 </div>
-                
+
             </div>
         </div>
     </div>
